# octo-canvas

./: .env.example  .eslintrc.cjs  .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  tsconfig.json  turbo.json
.antigravity/: instructions.md
.github/: copilot-instructions.md
apps/bridge/: Dockerfile  package.json  pyproject.toml
apps/bridge/src/bridge/: __init__.py  __main__.py  chat_mux.py  config.py  main.py  ringbuf.py  tcp_server.py  ws_client.py
apps/bridge/src/bridge/lib/: env.py  logger.py
apps/bridge/tests/: test_frame_dedup.py  test_idle_exit.py  test_ringbuf.py  test_self_check.py  test_smoke.py
apps/orchestrator/: Dockerfile  package.json  pyproject.toml  pyrightconfig.json
apps/orchestrator/src/orchestrator/: app.py  main.py
apps/orchestrator/src/orchestrator/lib/: env.py  logger.py  provider_factory.py  redis_client.py
apps/orchestrator/src/orchestrator/middleware/: auth.py
apps/orchestrator/src/orchestrator/routes/: anthropic_proxy.py  auth.py  chats.py  deps.py  internal.py  me.py  repos.py  sandbox.py  sandbox_bridge.py  sandbox_fs.py  sandbox_git.py
apps/orchestrator/src/orchestrator/services/: bridge_owner.py  bridge_session.py  bridge_wheel.py  chat_runner.py  event_store.py  fs_watcher.py  reconciliation.py  sandbox_manager.py
apps/orchestrator/src/orchestrator/services/user_agent/: __init__.py  clarification.py  enhance.py  filter.py  loop.py  memory.py  suggest.py
apps/orchestrator/src/orchestrator/services/user_agent/providers/: __init__.py  anthropic.py
apps/orchestrator/src/orchestrator/ws/: bridge.py  bridge_debug.py  chat_fanout.py  chats.py  fs_watch.py  pty.py  task_fanout.py  web.py
apps/orchestrator/tests/: conftest.py  test_anthropic_proxy.py  test_auth.py  test_bridge_wheel.py  test_chat_runner.py  test_event_store.py  test_event_store_chats.py  test_health.py  test_internal_inject.py  test_me_settings.py  test_provider_startup.py  test_reconciliation.py  test_repos.py  test_reset_checkpoint.py  test_sandbox.py  test_sandbox_bridge_provision.py  test_sandbox_fs.py  test_sandbox_git.py  test_task_fanout.py  test_user_agent_filter.py  test_user_agent_memory.py  test_ws_fs_watch.py  test_ws_pty.py  test_ws_web.py
apps/web/: components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1777725788827-cc0fba7a26f628.mjs
apps/web/src/: main.tsx  vite-env.d.ts
apps/web/src/components/: SandboxPanel.tsx
apps/web/src/components/ide/: ActivityBar.tsx  ChatTranscript.tsx  ChatsPanel.tsx  FileEditor.tsx  FileTree.tsx  GitPanel.tsx  Layout.tsx  Terminal.tsx  Terminals.tsx
apps/web/src/hooks/: ide.ts  useChatStream.ts  useTaskStream.ts
apps/web/src/lib/: api.ts  auth.ts  chats.ts  fs.ts  fsWatch.ts  git.ts  pty.ts  queries.ts  repos.ts  sandbox.ts  wire.ts
apps/web/src/routes/: _authed.tsx  index.tsx  login.tsx
apps/web/src/routes/_authed/: dashboard.tsx  sandbox.tsx
docs/: CONTRIBUTING.md  Contributions.md  Plan.md  TESTING.md  agent_context.md  engineering.md  progress.md  scaffold.md
docs/slice/: slice1.md  slice2.md  slice3.md  slice4.md  slice5a.md  slice5b.md  slice6.md  slice7.md  slice8.md
docs/sprites/v0.0.1-rc43/: http.md  python.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/wiki/: Beanie_models,_raw_collection_access,_and_Mongo_lifecycle_helpers..md  Community_0.md  Community_1.md  Community_10.md  Community_11.md  Community_12.md  Community_13.md  Community_14.md  Community_15.md  Community_16.md  Community_17.md  Community_18.md  Community_19.md  Community_2.md  Community_20.md  Community_21.md  Community_22.md  Community_23.md  Community_24.md  Community_25.md  Community_26.md  Community_27.md  Community_28.md  Community_29.md  Community_3.md  Community_30.md  Community_31.md  Community_32.md  Community_33.md  Community_34.md  Community_35.md  Community_36.md  Community_37.md  Community_38.md  Community_39.md  Community_4.md  Community_40.md  Community_41.md  Community_42.md  Community_43.md  (+47 more)
python_packages/agent_config/: package.json  pyproject.toml
python_packages/agent_config/src/agent_config/: __init__.py  credentials.py  llm_provider.py
python_packages/agent_config/src/agent_config/prompts/: __init__.py  dev_agent.py
python_packages/agent_config/tests/: test_allowlist.py  test_credentials.py  test_dev_agent_prompt.py  test_smoke.py
python_packages/db/: package.json  pyproject.toml
python_packages/db/src/db/: __init__.py  collections.py  connect.py  mongo.py
python_packages/db/src/db/models/: __init__.py  agent_event.py  chat.py  chat_turn.py  repo.py  sandbox.py  session.py  task.py  user.py  user_agent_memory.py
python_packages/db/tests/: test_smoke.py
python_packages/github_integration/: package.json  pyproject.toml
python_packages/github_integration/src/github_integration/: __init__.py  client.py  exceptions.py
python_packages/github_integration/tests/: test_smoke.py
python_packages/repo_introspection/: package.json  pyproject.toml
python_packages/repo_introspection/src/repo_introspection/: __init__.py  commands.py  github_source.py  language.py  orchestrate.py  package_manager.py  runtimes.py  system_packages.py
python_packages/repo_introspection/tests/: test_commands.py  test_language.py  test_package_manager.py  test_runtimes.py  test_smoke.py  test_system_packages.py
python_packages/sandbox_provider/: package.json  pyproject.toml
python_packages/sandbox_provider/src/sandbox_provider/: __init__.py  interface.py  mock.py  sprites.py
python_packages/sandbox_provider/tests/: test_mock.py  test_mock_5b.py  test_mock_6.py  test_smoke.py  test_sprites.py  test_sprites_6.py
python_packages/shared_models/: package.json  pyproject.toml
python_packages/shared_models/src/shared_models/: __init__.py  github.py  introspection.py  sandbox.py  sandbox_fs.py  sandbox_git.py  user.py
python_packages/shared_models/tests/: test_smoke.py
(+11 files in other folders)
