[project]
name = "bridge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.48",
    "websockets>=13.0",
    "GitPython>=3.1",
    "structlog>=24.4",
    "pydantic-settings>=2.6",
    "githubkit>=0.11",
    "httpx>=0.27",
    "shared_models",
    "agent_config",
    "repo_introspection",
    "github_integration",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pyright>=1.1", "ruff>=0.7"]

[tool.uv.sources]
shared_models = { workspace = true }
agent_config = { workspace = true }
repo_introspection = { workspace = true }
github_integration = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bridge"]
