[project]
name = "orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "beanie>=2.0,<3.0",
    "authlib>=1.3",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "redis>=5.0",
    "githubkit>=0.11",
    "shared_models",
    "db",
    "sandbox_provider",
    "github_integration",
    "agent_config",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pyright>=1.1",
    "ruff>=0.7",
]

[tool.uv.sources]
shared_models = { workspace = true }
db = { workspace = true }
sandbox_provider = { workspace = true }
github_integration = { workspace = true }
agent_config = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
