[project]
name = "db"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0,<3.0",
    "pydantic>=2.9",
    "pymongo>=4.11,<5.0",
    "shared_models",
]

[tool.uv.sources]
shared_models = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db"]
