[project]
name = "sandbox_provider"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    # Sprites SDK — installed via --pre because rc tags don't satisfy the
    # default resolver. rc43 docs in docs/sprites/v0.0.1-rc43/python.md describe the
    # API; rc37 (latest on PyPI as of 2026-05-01) has the same surface for
    # everything slice 4 touches.
    "sprites-py>=0.0.1rc37",
    # Slice 6 — `fs_watch_subscribe` opens a raw WSS to /v1/sprites/{name}/fs/watch
    # because the SDK doesn't expose `watch`. httpx is already pulled in by
    # the SDK; we add `websockets` explicitly so the import is honest.
    "websockets>=13.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox_provider"]
